Update heading for order registration information
Correção

--- a/pages/picker.html
+++ b/pages/picker.html
@@ -26,7 +26,7 @@
     <div class="info-card">
         <h3>Registro Inicial da Encomenda</h3>
         <p>É essencial anotar inicialmente os dados da encomenda para garantir a reversão do processo em caso de problemas.</p>
-        <strong>Dados fundamentais a anotar:</strong>
+        <strong>Informações Essenciais para Registrar (Etiqueta ou Captura de Tela):</strong>
         <ul>
             <li><strong>ID:</strong> Deve iniciar com 0.</li>
             <li><strong>Número da Encomenda:</strong> Composto por 6 dígitos.</li>
