--- a/pages/picker.html
+++ b/pages/picker.html
@@ -58,7 +58,7 @@
     <p><strong>Compras da Manhã:</strong> Imediatamente após o picking, os produtos devem ser dispostos nas caixas térmicas com as placas de gelo. Isto assegura o aproveitamento eficiente do espaço, facilita o armazenamento de futuras encomendas e mantém o fluxo de trabalho.</p>
     <p><strong>Prazo Limite para Encaixotamento:</strong> Todas as encomendas completadas devem ser acondicionadas nas caixas térmicas o mais rapidamente possível, sendo o prazo máximo as 16:30. Este procedimento é crucial para otimizar a entrega e, se for o caso, antecipar o horário de receção para o cliente.</p>
 
-    <p class="footer-note">Dica: Os artigos desta encomenda são representados por um triângulo roxo no aplicativo.</p>
+    <p class="footer-note">Dica: Cada rota que você desenha nas suas escolhas diárias é um passo silencioso rumo a um futuro promissor.</p>
 </div>
 
 <script src="../js/main.js"></script>
